--- a/MODUL1 ARDDHANA/assets/css/custom.css
+++ b/MODUL1 ARDDHANA/assets/css/custom.css
@@ -1,27 +1,31 @@
 body {
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
 }
 
 #logo-nav {
-    width: 150px;
-    float: left;
+  width: 150px;
+  float: left;
 }
 
 .nav-link:hover {
-    background-color: #005cbf;
+  background-color: #005cbf;
 }
 
 .content {
-    margin-top: 5%;
+  margin-top: 5%;
 }
 
 .video-container {
-    background-color: #e5e5e5;
+  background-color: #e5e5e5;
 }
 
 .form-container {
-    background-color: white;
-    padding: 7% !important;
+  background-color: white;
+  padding: 7% !important;
+}
+
+#logo-card {
+  width: 50%;
 }
 
 /*# sourceMappingURL=custom.css.map */
